adding contact emil

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 		<h1 class="app__name">Impact</h1>
 		<p class="app__description">By changing where we grab a coffee or food once a month we can make real IMPACT in many peoples lives</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+			<a href="https://apps.apple.com/us/app/impact-australia/id1579214784" class="app__button-ios" target="_blank" title="Get on Appstore">
 				<img src="assets/ios-badge.svg" alt="Get on Appstore">
 			</a>
 		</div>
 	</div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+	<a href="https://apps.apple.com/us/app/impact-australia/id1579214784" class="app__button-ios" target="_blank" title="Get on Appstore">
 		<img src="assets/ios-badge.svg" alt="Get on Appstore">
 	</a>
 </div>
@@ -76,6 +76,13 @@
 
 	</div>
 </section>
+<section class="app__fulldescription app__section container">
+	<h2 class="app__section-title">Contact</h2>
+	<div class="app__fulldescription-content">
+		<p>Please contact us if you spot an issue or know of any other cafes in Melbourne that we can add to this add to this app.</p>
+		<a href = "mailto:confusedlarma@gmail.com">Send Email</a>
+	</div>
+</section>
 		</main>
 		<footer class="footer">
 			<div class="container">
@@ -87,7 +94,7 @@
 					</p>
 					<ul class="footer__links">
 							<li class="footer__link">
-								<a href="page-1.html">Privacy</a>
+								<a href="privacy.html">Privacy</a>
 							</li>
 					</ul>
 				</div>
