updating for aiappstudio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>My Page Title</title>
+	<title>AIAppStudio</title>
 
 	<meta name="description" content="My Page Description" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,10 +19,10 @@
 	<body>
 		<main>
 <header class="app__header container">
-	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/xc7js4ltguo1ye5l03vi.png" alt="Impact"></div>
+	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/appicon.png" alt="AIAppStudio"></div>
 	<div class="app__infos">
-		<h1 class="app__name">Impact</h1>
-		<p class="app__description">By changing where we grab a coffee or food once a month we can make real IMPACT in many peoples lives</p>
+		<h1 class="app__name">AIAppStudio</h1>
+		<p class="app__description">Help streamline development workflows and enhance productivity.</p>
 		<div class="app__buttons app__buttons--desktop">
 			<a href="https://apps.apple.com/us/app/impact-australia/id1579214784" class="app__button-ios" target="_blank" title="Get on Appstore">
 				<img src="assets/ios-badge.svg" alt="Get on Appstore">
@@ -41,23 +41,17 @@
 	</div>
 	<div class="app__screenshots-wrapper container-desktop">
 		<div class="app__screenshots-list">
-			<a href="content/image/arhvhtfik2zv2whmxlx.jpeg" class="lightbox">
-				<img src="content/image/arhvhtfik2zv2whmxlx.jpeg" class="app__screenshot" alt="" />
+			<a href="content/image/screenshot0.jpg" class="lightbox">
+				<img src="content/image/screenshot0.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/ylfn5pxsiei5ltlagvy.jpeg" class="lightbox">
-				<img src="content/image/ylfn5pxsiei5ltlagvy.jpeg" class="app__screenshot" alt="" />
+			<a href="content/image/screenshot1.jpg" class="lightbox">
+				<img src="content/image/screenshot1.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/czwlxfot0krmn0p5gu7.jpeg" class="lightbox">
-				<img src="content/image/czwlxfot0krmn0p5gu7.jpeg" class="app__screenshot" alt="" />
+			<a href="content/image/screenshot2.jpg" class="lightbox">
+				<img src="content/image/screenshot2.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/875ttxzysw0mnk8gclo.jpeg" class="lightbox">
-				<img src="content/image/875ttxzysw0mnk8gclo.jpeg" class="app__screenshot" alt="" />
-			</a>
-			<a href="content/image/ql86mpziwvkc4yfdpok.jpeg" class="lightbox">
-				<img src="content/image/ql86mpziwvkc4yfdpok.jpeg" class="app__screenshot" alt="" />
-			</a>
-			<a href="content/image/yq7ko4uariaacjz3wlj.jpeg" class="lightbox">
-				<img src="content/image/yq7ko4uariaacjz3wlj.jpeg" class="app__screenshot" alt="" />
+			<a href="content/image/screenshot3.jpg" class="lightbox">
+				<img src="content/image/screenshot3.jpg" class="app__screenshot" alt="" />
 			</a>
 		</div>
 	</div>
@@ -65,21 +59,23 @@
 <section class="app__fulldescription app__section container">
 	<h2 class="app__section-title">Description</h2>
 	<div class="app__fulldescription-content">
-		<p>By changing where we grab a coffee or food once a month we can make real IMPACT in many peoples lives.  All cafes in this app support communities in need.  Help them help others.</p>
-<p>Features:</p>
-<ul>
-<li>List of cafes and restaurants in Melbourne</li>
-<li>Set a reminder to keep up the habit</li>
-<li>Map</li>
-<li>Directions</li>
-</ul>
+		<p>Elevate your development with AIAppStudio.</p>
+		<p>Thought I'd share this app I built for myself to help streamline my development workflow and enhance my productivity.	
+			</br>AIAppStudio doesn't just create code snippets, with the correct system prompts it can help to build entire features in one go.
+			</br>Create personas for specific tasks, whether writing code for iOS or Android applications.
+			</br>Add code as a prompt helping to design the output of AI to be in your own style.
+			</br>Select output to detect code, with the ability to save to file.
+			</br>Choose the output to display as raw, with the ability to edit user and AI responses..
+			</br>I've also added some beta features to help generate app icons.
+			</br>Hope you find it useful.
+		</p>
 
 	</div>
 </section>
 <section class="app__fulldescription app__section container">
 	<h2 class="app__section-title">Contact</h2>
 	<div class="app__fulldescription-content">
-		<p>Please contact us if you spot an issue or know of any other cafes in Melbourne that we can add to this add to this app.</p>
+		<p>Please contact us if you spot an issues.</p>
 		<a href = "mailto:confusedlarma@gmail.com">Send Email</a>
 	</div>
 </section>
