--- a/saliencemap/privacy.html
+++ b/saliencemap/privacy.html
@@ -8,22 +8,35 @@
     </head>
     <body>
     <strong>Privacy Policy</strong>
-    <p>This privacy policy applies to the Salience Map app (hereby referred to as "Application") for mobile devices that was created by Richard Moult (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".
+    <p>This privacy policy applies to the Salience Map app (hereby referred to as "Application") for devices that was created by Richard Moult (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".
     </p>
+    <p></p>
+    <br><strong>Screen Capture Collection and Use</strong>
+    <p>The Application, upon the users request can capture a selected image of either the devices display or selected Window.</p>
+    <ul>
+        <li>No external services are used to process any image data.</li>
+        <li>The captured images use Apple machine learning technology, on device, to calculate the saliency and aesthetic scores to provide the user extra information about the image.</li>
+        <li>The Application does not store any image captures or any data resulting from the image capture.</li>
+        <li>The Application does not share any image captures or any resulting data with any thirdy party companies.</li>
+        <li>Once the window containing the salience map and aesthetics is closed, the image and its data are destroyed.</li>
+        <li>Once the app is closed any images, salience maps and aesthetics scores are destroyed.</li>
+        <li></li>
+    </ul>
     <br><strong>Information Collection and Use</strong>
-    <p>The Application collects information when you download and use it. This information may include information such as        
+    <p>The Application, via Apples default analytics services, collects information when you download and use it. This information may include information such as        
     </p>
     <ul>
         <li>Your device's Internet Protocol address (e.g. IP address)</li>
         <li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li>
         <li>The time spent on the Application</li>
-        <li>The operating system you use on your mobile device</li>
+        <li>The operating system you use on your device</li>
     </ul>
-    <p></p>
-    <br><p>The Application does not gather precise information about the location of your mobile device.</p>
+    <br><p>The Application does not gather precise information about the location of your device.</p> 
+
     <br><strong>Third Party Access</strong>
     <p>Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement.</p>
-   <br><p>The Service Provider may disclose User Provided and Automatically Collected Information:</p>
+    <p>No image or resulting data is shared with any external services.</p>
+    <br><p>The Service Provider may disclose User Provided and Automatically Collected Information:</p>
     <ul>
         <li>as required by law, such as to comply with a subpoena, or similar legal process;</li>
         <li>when they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</li>
@@ -31,7 +44,7 @@
     </ul>
     <p></p>
     <br><strong>Opt-Out Rights</strong>
-    <p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device.</p>
+    <p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your device.</p>
     <br><strong>Data Retention Policy</strong>
     <p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. If you'd like them to delete User Provided Data that you have provided via the Application, please contact them at confusedlarma@gmail.com and they will respond in a reasonable time.</p>
     <br><strong>Children</strong><p>The Service Provider does not use the Application to knowingly solicit data from or market to children under the age of 13.</p>
