--- a/minibox/index.html
+++ b/minibox/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Salience Map</title>
+	<title>Mini Box</title>
 
 	<meta name="description" content="My Page Description" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
