app store updates

--- a/imagecompare/index.html
+++ b/imagecompare/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Salience Map</title>
+	<title>Image Comapre</title>
 
 	<meta name="description" content="My Page Description" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,7 +30,7 @@
 	</div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://apps.apple.com/us/app/saliencemap/id6736514350" class="app__button-ios" target="_blank" title="Get on Appstore">
+	<a href="https://apps.apple.com/us/app/imagecompare/id6744907673" class="app__button-ios" target="_blank" title="Get on Appstore">
 		<img src="assets/ios-badge.svg" alt="Get on Appstore">
 	</a>
 </div>
